# propject_activites_task_1

./: .gitignore  README.md  pyproject.toml
examples/: example.py
src/binary_feature/: __init__.py  binary_feature.py
src/binary_feature.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
