[project]
name = "binary_feature"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.2",
]

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}